--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
     <header>
-    <h1>Learning how to branch</h1>
+      <h1>Learning how to branch</h1>
     </header>
-</body>
+    <main>
+      <section>
+        <ul>
+          <li>
+            <img src="https:www.placebear.com/200/300" alt="Cute bears" />
+          </li>
+          <li>
+            <img src="https:www.placebear.com/200/300" alt="Cute bears" />
+          </li>
+          <li>
+            <img src="https:www.placebear.com/200/300" alt="Cute bears" />
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
